# medical-report-system

./: .env.example  .gitignore  README.md  benchmark_models.py  benchmark_pdf.py  benchmark_zhipu.py  benchmark_zhipu_vs_sf.py  check_thinking.py  deploy.sh  iPad-App-Plan.md  zbpack.json
.claude/: settings.local.json
.github/workflows/: ci.yml
.sisyphus/: boulder.json
.sisyphus/notepads/upload-speed-optimization/: learnings.md
.sisyphus/plans/: upload-speed-optimization.md
backend/: Cargo.toml
backend/src/: audit.rs  auth.rs  cache.rs  crypto.rs  db.rs  error.rs  main.rs  metrics.rs  middleware.rs  models.rs  openapi.rs  routes.rs  search.rs
backend/src/algorithm_engine/: grouping_engine.rs  integration_tests.rs  llm_verify.rs  mod.rs  name_normalizer.rs  report_profiles.rs  report_taxonomy.rs  trend_analyzer.rs
backend/src/algorithm_engine/dictionaries/: item_synonyms.json  report_profiles.json  report_types.json
backend/src/db/: assessment_repo.rs  edit_log_repo.rs  expense_repo.rs  file_repo.rs  helpers.rs  interpretation_repo.rs  medication_repo.rs  mod.rs  patient_repo.rs  refresh_token_repo.rs  report_repo.rs  risk_prediction_repo.rs  temperature_repo.rs  test_item_repo.rs  trend_repo.rs
backend/src/handlers/: admin.rs  audit_handler.rs  backup.rs  drug_interaction.rs  expense.rs  health_assessment.rs  interpret.rs  med_lab_correlation.rs  medications.rs  mod.rs  normalize.rs  ocr.rs  patients.rs  rag.rs  reports.rs  risk_prediction.rs  stats.rs  temperatures.rs  user_settings.rs
backend/src/ocr/: image.rs  mod.rs  parser.rs  vision.rs
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Badge.tsx  BottomSheet.tsx  Button.tsx  Card.tsx  Empty.tsx  FloatingActionButton.tsx  Input.tsx  LlmInterpret.tsx  Modal.tsx  PWAInstallPrompt.tsx  Pagination.tsx  Progress.tsx  ReloadPrompt.tsx  SearchBar.tsx  Select.tsx  Skeleton.tsx  Spinner.tsx  Switch.tsx  Table.tsx  Tabs.tsx  TemperatureChart.tsx  TemperatureWeeklyChart.tsx  TestItemStatusBadge.tsx  Textarea.tsx  Toast.tsx  TrendChart2.tsx  TrendTable2.tsx  index.ts
frontend/src/layouts/: AppLayout.tsx
frontend/src/lib/: constants.ts  expense-constants.ts  export-pdf.ts  export.ts  pinyin.ts  theme.ts  trend-helpers.ts
frontend/src/pages/: AdminAuditLogs.tsx  AdminUsers.tsx  Dashboard.tsx  DrugInteraction.tsx  EditLogs.tsx  ExpenseDetail.tsx  ExpenseUpload.tsx  HealthAssessment.tsx  Login.tsx  MedLabCorrelation.tsx  Medications.tsx  PatientCreate.tsx  PatientDetail.tsx  PatientEdit.tsx  RagAssistant.tsx  Register.tsx  ReportCompare.tsx  ReportDetail.tsx  ReportTemplates.tsx  ReportUpload.tsx  RiskPrediction.tsx  Settings.tsx  Timeline.tsx  TrendAnalysis.tsx
frontend/src/pages/patient-detail/: PatientExpenses.tsx  PatientTemperatures.tsx
frontend/src/stores/: auth.ts
frontend/src/types/: pwa.d.ts  tiny-pinyin.d.ts
plans/: 00-api-reference.md  01-backend-independence.md  01-功能路线图.md  02-web-frontend-separation.md  02-技术优化建议.md  03-AI能力扩展.md  03-android-client.md  04-wechat-miniprogram.md  04-安全合规与战略方向.md  05-01-error-codes.md  05-02-refresh-token.md  05-03-upload-pagination.md  05-04-versioning-cors.md  05-api-gap-analysis.md  README.md
