[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[features]
default = []
ocr = ["leptess"]

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
sled = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
leptess = { version = "0.14", optional = true }
regex = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
tracing = "0.1"
tracing-subscriber = "0.3"
indexmap = "2"
pinyin = "0.10"
tokio-stream = "0.1"
async-stream = "0.3"
futures-util = "0.3.31"
dotenvy = "0.15"
