[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[features]
default = []
ocr = ["leptess"]

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "compression-gzip", "compression-br"] }
r2d2 = "0.8"
leptess = { version = "0.14", optional = true }
regex = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
tracing = "0.1"
tracing-subscriber = "0.3"
indexmap = "2"
pinyin = "0.10"
tokio-stream = "0.1"
async-stream = "0.3"
futures-util = "0.3.31"
dotenvy = "0.15"
tower = { version = "0.4", features = ["util"] }
governor = "0.6"
jsonwebtoken = "9"
bcrypt = "0.16"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
# LLM 缓存
moka = { version = "0.12", features = ["future"] }
# 搜索引擎
tantivy = "0.22"
# Prometheus 监控
axum-prometheus = "0.7"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
# OpenAPI 文档生成
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
